# SoftwareEng2025

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  generate_build.bat  hello.cpp
.github/workflows/: CI.yml
cmake/: HelloProjConfig.cmake.in
include/simtown/: building.h  dynarray.h  rock.h
mains/: CMakeLists.txt  hello.cpp  simtown_main.cpp
src/basic/: CMakeLists.txt  message.cpp
src/simtown/: CMakeLists.txt  building.cpp  rock.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
